@@ -33,19 +33,18 @@ JHtml::_('behavior.caption');
 	<?php endif; ?>
 
 	<?php if ($this->params->get('show_description', 1) || $this->params->def('show_description_image', 1)) : ?>
-	<div class="category-desc">
+	<div class="category-desc clearfix">
 		<?php if ($this->params->get('show_description_image') && $this->category->getParams()->get('image')) : ?>
 			<img src="<?php echo $this->category->getParams()->get('image'); ?>"/>
 		<?php endif; ?>
 		<?php if ($this->params->get('show_description') && $this->category->description) : ?>
 			<?php echo JHtml::_('content.prepare', $this->category->description, '', 'com_content.category'); ?>
 		<?php endif; ?>
-		<div class="clr"></div>
 	</div>
 	<?php endif; ?>
 	<?php $leadingcount = 0; ?>
 	<?php if (!empty($this->lead_items)) : ?>
-	<div class="items-leading">
+	<div class="items-leading clearfix">
 		<?php foreach ($this->lead_items as &$item) : ?>
 		<div class="leading-<?php echo $leadingcount; ?><?php echo $item->state == 0 ? ' system-unpublished' : null; ?>">
 			<?php
@@ -53,13 +52,11 @@ JHtml::_('behavior.caption');
 				echo $this->loadTemplate('item');
 			?>
 		</div>
-		<div class="clearfix"></div>
 		<?php
 			$leadingcount++;
 		?>
 		<?php endforeach; ?>
 	</div><!-- end items-leading -->
-	<div class="clearfix"></div>
 	<?php endif; ?>
 	<?php
 	$introcount = (count($this->intro_items));
@@ -73,7 +70,7 @@ JHtml::_('behavior.caption');
 		$row = $counter / $this->columns;
 
 		if ($rowcount == 1) : ?>
-		<div class="items-row cols-<?php echo (int) $this->columns;?> <?php echo 'row-'.$row; ?> row-fluid">
+		<div class="items-row cols-<?php echo (int) $this->columns;?> <?php echo 'row-'.$row; ?> row-fluid clearfix">
 		<?php endif; ?>
 			<div class="span<?php echo round((12 / $this->columns));?>">
 				<div class="item column-<?php echo $rowcount;?><?php echo $item->state == 0 ? ' system-unpublished' : null; ?>">
@@ -83,7 +80,7 @@ JHtml::_('behavior.caption');
 				?>
 				</div><!-- end item -->
 				<?php $counter++; ?>
-			</div><!-- end spann -->
+			</div><!-- end span -->
 			<?php if (($rowcount == $this->columns) or ($counter == $introcount)) : ?>
 		</div><!-- end row -->
 			<?php endif; ?>
@@ -99,7 +96,7 @@ JHtml::_('behavior.caption');
 	<div class="cat-children">
 	<?php if ($this->params->get('show_category_heading_title_text', 1) == 1) : ?>
 		<h3> <?php echo JTEXT::_('JGLOBAL_SUBCATEGORIES'); ?> </h3>
-	<?php endif; ?>		
+	<?php endif; ?>
 		<?php echo $this->loadTemplate('children'); ?> </div>
 	<?php endif; ?>
 	<?php if (($this->params->def('show_pagination', 1) == 1  || ($this->params->get('show_pagination') == 2)) && ($this->pagination->get('pages.total') > 1)) : ?>
